feat (SPV-835): CR fixes
