# docs/swagger.json
@@ -6,6 +6,31 @@
         "version": "v0.12.0"
     },
     "paths": {
+        "/api/v1/configs/shared": {
+            "get": {
+                "security": [
+                    {
+                        "x-auth-xpub": []
+                    }
+                ],
+                "description": "Get shared config",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Configurations"
+                ],
+                "summary": "Get shared config",
+                "responses": {
+                    "200": {
+                        "description": "Shared configuration",
+                        "schema": {
+                            "$ref": "#/definitions/models.SharedConfig"
+                        }
+                    }
+                }
+            }
+        },
         "/transaction/broadcast/callback": {
             "post": {
                 "security": [
@@ -1197,31 +1222,6 @@
                 }
             }
         },
-        "/v1/configs/shared": {
-            "get": {
-                "security": [
-                    {
-                        "x-auth-xpub": []
-                    }
-                ],
-                "description": "Get shared config",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Shared-config"
-                ],
-                "summary": "Get shared config",
-                "responses": {
-                    "200": {
-                        "description": "Shared configuration",
-                        "schema": {
-                            "$ref": "#/definitions/models.SharedConfig"
-                        }
-                    }
-                }
-            }
-        },
         "/v1/contact/accepted/{paymail}": {
             "patch": {
                 "security": [
@@ -1684,14 +1684,15 @@
                         "x-auth-xpub": []
                     }
                 ],
-                "description": "Get shared config",
+                "description": "This endpoint has been deprecated. Use (GET) /api/v1/configs/shared instead.",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
-                    "Shared-config"
+                    "Configurations"
                 ],
-                "summary": "Get shared config",
+                "summary": "Get shared config - Use (GET) /api/v1/configs/shared instead.",
+                "deprecated": true,
                 "responses": {
                     "200": {
                         "description": "Shared configuration",
@@ -4572,6 +4573,16 @@
                 1000000000,
                 60000000000,
                 3600000000000,
+                -9223372036854775808,
+                9223372036854775807,
+                1,
+                1000,
+                1000000,
+                1000000000,
+                60000000000,
+                3600000000000,
+                -9223372036854775808,
+                9223372036854775807,
                 1,
                 1000,
                 1000000,
@@ -4588,6 +4599,16 @@
                 "Second",
                 "Minute",
                 "Hour",
+                "minDuration",
+                "maxDuration",
+                "Nanosecond",
+                "Microsecond",
+                "Millisecond",
+                "Second",
+                "Minute",
+                "Hour",
+                "minDuration",
+                "maxDuration",
                 "Nanosecond",
                 "Microsecond",
                 "Millisecond",
